# genetic-algorithm

./: .gitignore  CMakeLists.txt  README.md
src/: Chromosomes.h  ConstValue.h  Roullete.h  main.cpp  main.h
